--- a/Reproducible_Research_proj1.html
+++ b/Reproducible_Research_proj1.html
@@ -9,11 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Jenkins J B Kollie" />
+<meta name="author" content="Barnabas Jenkins Kollie" />
 
 <meta name="date" content="2025-06-11" />
 
-<title>Reproducible Research</title>
+<title>Reproducible Research Project 1</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,8 +350,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Reproducible Research</h1>
-<h4 class="author">Jenkins J B Kollie</h4>
+<h1 class="title toc-ignore">Reproducible Research Project 1</h1>
+<h4 class="author">Barnabas Jenkins Kollie</h4>
 <h4 class="date">2025-06-11</h4>
 
 </div>
@@ -382,8 +382,8 @@ str(activity)</code></pre>
 ##  $ steps   : int  NA NA NA NA NA NA NA NA NA NA ...
 ##  $ date    : chr  &quot;2012-10-01&quot; &quot;2012-10-01&quot; &quot;2012-10-01&quot; &quot;2012-10-01&quot; ...
 ##  $ interval: int  0 5 10 15 20 25 30 35 40 45 ...</code></pre>
-<p>What is mean total number of steps taken per day? Calculate the total
-number of steps taken per day</p>
+<p>What is mean total number of steps taken per day? 1. Calculate the
+total number of steps taken per day</p>
 <pre class="r"><code>Steps_total_per_day &lt;- aggregate(steps~date, activity, sum)
 head(Steps_total_per_day)</code></pre>
 <pre><code>##         date steps
