did little modification

--- a/Reproducible_Research_proj1.html
+++ b/Reproducible_Research_proj1.html
@@ -491,8 +491,8 @@ head(mean_steps_new_df)</code></pre>
 print(median_steps_new_df)</code></pre>
 <pre><code>## [1] 10766.19</code></pre>
 <p>Do these values differ from # the estimates from the first part of
-the assignment? There is insignificant difference. When we replacing the
-NA values we got a increase about number of days but insignificant
+the assignment? There is insignificant difference. When I was replacing
+the NA values I got an increase about number of days but insignificant
 difference between previous values of mean and median</p>
 <p>What is the impact of inputing missing data on the estimates of the
 total daily number of steps? The number of days increased.</p>
